fix button to switch to projects column on mobile

--- a/app/assets/sass/05-components/_btn.sass
+++ b/app/assets/sass/05-components/_btn.sass
@@ -6,6 +6,9 @@
   transition: background-color .2s linear
   cursor: pointer
   border: 0
+  display: flex
+  align-items: center
+  justify-content: center
 
 .btn--primary
   color: $btn-primary-text-color
