--- a/app/assets/sass/05-components/_tasks.sass
+++ b/app/assets/sass/05-components/_tasks.sass
@@ -1,13 +1,11 @@
-.tasks__back-btn
-  display: flex
-  justify-content: center
-  align-items: center
-  margin: 0 auto 1.5em
+.view-projects-btn
+  margin-bottom: 1em
+  padding: .5em .75em
+
+  svg
+    margin-right: .25em
+    width: .75em
+    height: .75em
 
   @include for-tablet-landscape-up
     display: none
-
-.tasks__back-arrow
-  width: 25px
-  height: 25px
-  margin-right: .5em
